--- a/gg.css
+++ b/gg.css
@@ -150,6 +150,11 @@ color: black;
         height: 1000px;
 
     }
+    .gc2{
+    display:grid;
+        grid-template-columns:repeat(2,1fr);
+        gap:20px;
+    }
 
    
 
